# github-workflows-monitoring

./: .pre-commit-config.yaml  Dockerfile  README.md  app.py  const.py  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yaml  tests.yaml
src/: app.py  const.py  github.py  job_processor.py  jobs.py  metrics.py  query_graphql.py  queryql.py  utils.py
tests/: conftest.py  requirements.txt  test_app.py  test_jobs.py  tests.py
