[metadata]
name = github-workflows-monitoring
version = 0.2.1
license-file = LICENSE

[options]
python_requires = >=3.8
packages = find:
install_requires =
        Flask>=3,<4
        Flask-APScheduler==1.13.1
        datadog==0.52.1
        gql[all]==3.5.3

[flake8]
max-line-length = 120
exit-zero = True
max-complexity = 10
